--- a/thi/CSS/Pay.css
+++ b/thi/CSS/Pay.css
@@ -7,6 +7,7 @@ body {
 .payment-container {
     display: flex;
     justify-content: space-between;
+    background-position: center;
     padding: 30px;
     gap: 40px;
 }
