--- a/thi/CSS/Shop.css
+++ b/thi/CSS/Shop.css
@@ -2,6 +2,8 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 header {
